# flash-attention

./: README.md  attn.cu  main.py  pybind.cpp  pyproject.toml
