[project]
name = "ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flash-attn>=2.8.3",
    "matplotlib>=3.10.6",
    "ninja>=1.13.0",
    "pandas>=2.3.2",
    "torch>=2.8.0",
]


[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]
